Updated CR dropdown

--- a/code/stacy/capstone/EncounterBuilder/encounter_builder/templates/encounter_builder/buildEncounter.html
+++ b/code/stacy/capstone/EncounterBuilder/encounter_builder/templates/encounter_builder/buildEncounter.html
@@ -41,9 +41,12 @@
             </div>
         </div>
         <div id="monster-selector-div">
-            <select id="cr-selector"></select>
+            <select id="cr-selector">
+                <option value="" selected disabled hidden>Choose CR</option>
+            </select>
             <select id="monsters-by-cr"></select>
             <div id="monster-statblock"></div>
+            
         </div>
     </div>
     <div id="statblock-div">
