--- a/code/ashby/JavaScript/Lab_06 Pokedex/pokeapp/static/pokeapp/detail.css
+++ b/code/ashby/JavaScript/Lab_06 Pokedex/pokeapp/static/pokeapp/detail.css
@@ -3,10 +3,10 @@
 body{
     height: 100vw;
     background-color: #31525B;
-    color: #e1b382;
+    color: #e1b382
 }
 a{
-    color: #ffcb05;
+    color: #B73225;
 }
 .container{
     width: 60%;
@@ -39,5 +39,7 @@ h1,h4, p{
     margin: 0 auto;
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
+    gap:20px;
 }
