--- a/code/ashby/JavaScript/Lab_06 Pokedex/pokeapp/templates/pokeapp/index.html
+++ b/code/ashby/JavaScript/Lab_06 Pokedex/pokeapp/templates/pokeapp/index.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div class="pokedex">
-            <div v-for='poke in pokemon' class="card">
+            <div v-for='poke in pokemonDisplay' class="card">
                 <a v-bind:href="'pokecheck/'+ poke.number"> <img v-bind:src=poke.image_front> </a>
                 <div class="container" style="text-align:center">
                 <h3><b>--poke.name--</b></h4>
@@ -39,7 +39,17 @@
                 </div>
             </div>
           </div>
+          <br>
+          
+
         </div>
+        <br>
+          <div class="page-bar">
+            <button v-for="x in Math.floor(pokemon.length/25)" class='page-button' v-bind:value='x' v-on:click="pokePage">--x--</button>
+
+          </div>
+          <br>
     </div>
+    <br>
 </body>
 </html>
