--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'pep_app/styles.css' %}"> 
     <title>Designated Pilot Examiners</title>
+
 </head>
 <body>
     <h1>Designated Pilot Examiners</h1>
@@ -18,67 +19,68 @@
         <input type="text" placeholder='Search...' id='search'>
     </div>
 
-    <div class='search_criteria'>
+   <form action='' method='POST'>
+       {% csrf_token %}
 
         <label for='states'>Choose a State</label>
         <select name="states" id="states">
             <option value=" ">- Select -</option>
-            <option value="alabama">Alabama</option>
-            <option value="alaska">Alaska</option>
-            <option value="arizona">Arizona</option>
-            <option value="arkansas">Arkansas</option>
-            <option value="california">California</option>
-            <option value="colorado">Colorado</option>
-            <option value="connecticut">Connecticut</option>
-            <option value="dc">DC</option>
-            <option value="delaware">Delaware</option>
-            <option value="florida">Florida</option>
-            <option value="georgia">Georgia</option>
-            <option value="hawaii">Hawaii</option>
-            <option value="idaho">Idaho</option>
-            <option value="illinois">Illinois</option>
-            <option value="indiana">Indiana</option>
-            <option value="iowa">Iowa</option>
-            <option value="kansas">Kansas</option>
-            <option value="kentucky">Kentuck</option>
-            <option value="louisiana">Louisiana</option>
-            <option value="maine">Maine</option>
-            <option value="maryland">Maryland</option>
-            <option value="massachusetts">Massachusetts</option>
-            <option value="michigan">Michigan</option>
-            <option value="minnesota">Minnesota</option>
-            <option value="mississippi">Mississippi</option>
-            <option value="missouri">Missouri</option>
-            <option value="montana">Montana</option>
-            <option value="nebraska">Nebraska</option>
-            <option value="nevada">Nevada</option>
-            <option value="new hampshire">New Hampshire</option>
-            <option value="new jersey">New Jersey</option>
-            <option value="new mexico">New Mexico</option>
-            <option value="new york">New York</option>
-            <option value="north carolina">North Carolina</option>
-            <option value="north dakota">North Dakota</option>
-            <option value="ohio">Ohio</option>
-            <option value="ohklahoma">Oklahoma</option>
-            <option value="oregon">Oregon</option>
-            <option value="pennsylvania">Pennsylvania</option>
-            <option value="rhode island">Rhode Island</option>
-            <option value="south carolina">South Carolina</option>
-            <option value="south dakota">South Dakota</option>
-            <option value="tennessee">Tennessee</option>
-            <option value="texas">Texas</option>
-            <option value="utah">Utah</option>
-            <option value="vermont">Vermont</option>
-            <option value="virginia">Virginia</option>
-            <option value="washington">Washington</option>
-            <option value="west virginia">West Virginia</option>
-            <option value="wisconsin">Wisconsin</option>
-            <option value="wyoming">Wyoming</option>
-
-
+            <option value="2">Alabama</option>
+            <option value="1">Alaska</option>
+            <option value="4">Arizona</option>
+            <option value="3">Arkansas</option>
+            <option value="5">California</option>
+            <option value="6">Colorado</option>
+            <option value="7">Connecticut</option>
+            <option value="8">DC</option>
+            <option value="9">Delaware</option>
+            <option value="10">Florida</option>
+            <option value="11">Georgia</option>
+            <option value="12">Hawaii</option>
+            <option value="14">Idaho</option>
+            <option value="15">Illinois</option>
+            <option value="16">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentuck</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+            
         </select>
-    </div>
-
+        <input type="submit">
+    </form>
+{{designee}}
   
     <ul>
         <table>
