--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
@@ -1,107 +1,23 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'pep_app/styles.css' %}"> 
-    <title>Designated Pilot Examiners</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'pep_app/styles.css' %}" />
+    <title>PEP Home</title>
+  </head>
+  <body>
+    <h1>PEP Home</h1>
 
-</head>
-<body>
-    <h1>Designated Pilot Examiners</h1>
-
-    <div class='topnav'>
-        <a class='active' href="#home">Home</a>
+    <div class="topnav">
+      <div>
+        <a class="active" href="{% url 'index' %}">Home</a>
         <a href="#about">About</a>
-        <a href="#examiners">Locate Examiners</a>
-        <input type="text" placeholder='Search...' id='search'>
+        <a href="{% url 'examiner' %}">Locate Examiners</a>
+      </div>
+      <input type="text" placeholder="Search..." id="search" />
     </div>
-
-   <form action='' method='POST'>
-       {% csrf_token %}
-
-        <label for='states'>Choose a State</label>
-        <select name="states" id="states">
-            <option value=" ">- Select -</option>
-            <option value="2">Alabama</option>
-            <option value="1">Alaska</option>
-            <option value="4">Arizona</option>
-            <option value="3">Arkansas</option>
-            <option value="5">California</option>
-            <option value="6">Colorado</option>
-            <option value="7">Connecticut</option>
-            <option value="8">DC</option>
-            <option value="9">Delaware</option>
-            <option value="10">Florida</option>
-            <option value="11">Georgia</option>
-            <option value="12">Hawaii</option>
-            <option value="14">Idaho</option>
-            <option value="15">Illinois</option>
-            <option value="16">Indiana</option>
-            <option value="IA">Iowa</option>
-            <option value="KS">Kansas</option>
-            <option value="KY">Kentuck</option>
-            <option value="LA">Louisiana</option>
-            <option value="ME">Maine</option>
-            <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option>
-            <option value="MI">Michigan</option>
-            <option value="MN">Minnesota</option>
-            <option value="MS">Mississippi</option>
-            <option value="MO">Missouri</option>
-            <option value="MT">Montana</option>
-            <option value="NE">Nebraska</option>
-            <option value="NV">Nevada</option>
-            <option value="NH">New Hampshire</option>
-            <option value="NJ">New Jersey</option>
-            <option value="NM">New Mexico</option>
-            <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
-            <option value="ND">North Dakota</option>
-            <option value="OH">Ohio</option>
-            <option value="OK">Oklahoma</option>
-            <option value="OR">Oregon</option>
-            <option value="PA">Pennsylvania</option>
-            <option value="RI">Rhode Island</option>
-            <option value="SC">South Carolina</option>
-            <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option>
-            <option value="TX">Texas</option>
-            <option value="UT">Utah</option>
-            <option value="VT">Vermont</option>
-            <option value="VA">Virginia</option>
-            <option value="WA">Washington</option>
-            <option value="WV">West Virginia</option>
-            <option value="WI">Wisconsin</option>
-            <option value="WY">Wyoming</option>
-            
-        </select>
-        <input type="submit">
-    </form>
-{{designee}}
-  
-    <ul>
-        <table>
-            <tr>
-                <th>Examiner Name</th>
-                <th>Address</th>
-                <th>Phone / Email</th>
-                <th>Function(s) Authorized</th>
-                <th>Office Name</th>
-            </tr>
-            {% for examiner in examiners.data %}
-                <tr>
-                    <td>{{examiner.fullName}}</td>
-                    <td>{{examiner.completeAddress}}</td>
-                    <td>{{examiner.phoneEmail}}</td>
-                    <td>{{examiner.functionCodes}}</td>
-                    <td>{{examiner.officeName}}</td>
-                </tr>
-            {% endfor %}
-        </table>
-    </ul>
-    
-</body>
+  </body>
 </html>
