added login/logout nav link/html page

--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
@@ -14,8 +14,9 @@
     <div class="topnav">
       <div>
         <a class="active" href="{% url 'index' %}">Home</a>
-        <a href="#about">About</a>
+        <a href="{% url 'about' %}">About</a>
         <a href="{% url 'examiner' %}">Locate Examiners</a>
+        <a href="{% url 'login' %}">Login/Logout</a>
       </div>
       <input type="text" placeholder="Search..." id="search" />
     </div>
