--- a/code/keenen/capstone/PEP/pep_app/templates/registration/login.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/registration/login.html
@@ -1,12 +1,47 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'pep_app/styles.css' %}" />
+    <title>Login</title>
+  </head>
+  <body>
+    <h1>Login/Logout</h1>
 
-{% block title %}Login{% endblock %}
+    <div class="topnav">
+      <div>
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'about' %}">About</a>
+        <a href="{% url 'examiner' %}">Locate Examiners</a>
+        <a class="active" href="{% url 'login' %}">Login/Logout</a>
+      </div>
+      <input type="text" placeholder="Search..." id="search" />
+    </div>
 
-{% block content %}
+    <form method="post">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit">Log In</button>
+    </form>
+
+    <div>
+      {% if user.is_authenticated %} Hi {{ user.username }}!
+      <p><a href="{% url 'logout' %}">Log Out</a></p>
+      {% else %}
+      <p>You are not logged in</p>
+      <a href="{% url 'login' %}">Log In</a>
+      {% endif %}
+    </div>
+  </body>
+</html>
+
+{% comment %} {% extends 'base.html' %} {% block title %}Login{% endblock %} {%
+block content %}
 <h2>Log In</h2>
 <form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
+  {% csrf_token %} {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
-{% endblock %}
+{% endblock %} {% endcomment %}
