--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/index.html
@@ -9,16 +9,19 @@
     <title>PEP Home</title>
   </head>
   <body>
+      <div class="topnav">
+        <div>
+          <a class="active" href="{% url 'index' %}">Home</a>
+          <a href="{% url 'about' %}">About</a>
+          {% if user.is_authenticated%}
+          <a href="{% url 'examiner' %}">Locate Examiners</a>
+          {% endif %}
+          <a href="{% url 'login' %}">Login/Logout</a>
+        </div>
+        <input type="text" placeholder="Search..." id="search" />
+      </div>
+      <br>
     <h1>PEP Home</h1>
 
-    <div class="topnav">
-      <div>
-        <a class="active" href="{% url 'index' %}">Home</a>
-        <a href="{% url 'about' %}">About</a>
-        <a href="{% url 'examiner' %}">Locate Examiners</a>
-        <a href="{% url 'login' %}">Login/Logout</a>
-      </div>
-      <input type="text" placeholder="Search..." id="search" />
-    </div>
   </body>
 </html>
