--- a/code/keenen/capstone/PEP/pep_app/templates/home.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
+  Hi {{ user.username }}! Welcome to the Pilot Examiner Planner!
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in</p>
