--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/about.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/about.html
@@ -15,7 +15,9 @@
         <div>
           <a href="{% url 'index' %}">Home</a>
           <a class="active" href="{% url 'about' %}">About</a>
+          {% if user.is_authenticated%}
           <a href="{% url 'examiner' %}">Locate Examiners</a>
+          {% endif %}
           <a href="{% url 'login' %}">Login/Logout</a>
         </div>
         <input type="text" placeholder="Search..." id="search" />
