--- a/code/keenen/capstone/PEP/pep_app/templates/registration/signup.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/registration/signup.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link rel="stylesheet" href="{% static 'pep_app/styles.css' %}" />
 </head>
 <body>
     <div class="topnav">
@@ -27,6 +28,8 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
+            <!-- input username -->
+            <!-- input password -->
             <button type="submit">Sign Up</button>
         </form>
 
